--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Form</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div id="left-content">
@@ -24,35 +25,36 @@
         </header>
         <main>
             <h2>Let's Do this!</h2>
-            <form action="">
+            <form id="my-form">
                 <div class="left-form">
                     <div class="first-name">
                         <label for="first-name">First name</label>
-                        <input type="text" id="first-name" required>
+                        <input type="text" id="first-name" required tabindex="1">
                     </div>
                     <div><label for="email">Email</label>
                         <input type="email" id="email" required>
                     </div>
                     <div><label for="password">Password</label>
-                        <input type="password" id="password" required>
+                        <input type="password" id="password" required minlength="8">
                     </div>
                 </div>
                 <div class="right-form">
                     <div><label for="last-name">Last Name</label>
                         <input type="text" id="last-name" required>
                     </div>
-                    <div><label for="phone">Phone</label>
-                        <input type="number" id="phone" required>
+                    <div><label for="phone">Phone Number</label>
+                        <input type="tel" id="phone" required minlength="7" maxlength="20">
                     </div>
                     <div><label for="confirm">Confirm Password</label>
-                        <input type="password" id="confirm" required>
+                        <input type="password" id="confirm" required minlength="8">
                     </div>
                 </div>
             </form>
+            <p id="error">* Passwords do not match</p>
         </main>
         <footer>
-            <button>Create Account</button>
-            <p>Already have an account? <a>Log In</a></p>
+            <button type="submit" form="my-form">Create Account</button>
+            <p>Already have an account? <a href="">Log In</a></p>
         </footer>
     </div>
 </body>
